# Learn_new

Backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tasks.json
Backend/MCP_Server/: README.md  __init__.py  server.py
Backend/MCP_Server/tools/: __init__.py  productivity_tools.py  task_tools.py
Backend/app/: __init__.py  ai_tools.py  config.py  database.py  dependencies.py  llm.py  main.py  mcp_client.py  models.py  productivity_tools.py  schemas.py  security.py  storage.py
Backend/app/repositories/: __init__.py  tasks.py  users.py
Backend/app/routes/: __init__.py  admin.py  attachments.py  auth.py  chat.py  google.py  tasks.py
Backend/app/services/: __init__.py  attachments.py  auth.py  chat.py  google_workspace.py  summary.py
Backend/tests/: __init__.py  test_chat_history.py  test_google_oauth.py  test_packages.py  test_task_deadlines.py
Frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/api/: auth.ts  chat.ts  client.ts  google.ts  tasks.ts
Frontend/src/auth/: AuthContext.tsx  token.ts
Frontend/src/components/: ChatMessage.tsx  ChatPanel.tsx  GlobalNavbar.tsx  InteractiveStarfield.tsx  LoadingIndicator.tsx  Navbar.tsx  SettingsPanel.tsx  (+6 more)
MCP_Server/: pyproject.toml  server.py
Week 1/Streaming/: st1.py  stream_chat.py
Week 1/Tone_rewriter/: tone.py
Week 1/meeting_json_cli/: main.py  requirements.txt  sample_notes.txt  schema.py
Week 2/: main.py  tasks.json
Week 2/app/: llm.py  main.py  storage.py
(+10 files in other folders)
