[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend and MCP tools for the Task AI application"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bcrypt>=4.3,<5",
    "fastapi>=0.115,<1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
    "openai>=1.68,<3",
    "pydantic>=2.10,<3",
    "pymongo>=4.11,<5",
    "python-dotenv>=1.0,<2",
    "python-jose[cryptography]>=3.4,<4",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.34,<1",
]

[tool.uv]
package = false
